--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@
     color: lightcoral;
 }
 .tableheader{
-    border: 1px solid red;
+    border: 1px solid burlywood;
     width: 100%;
     background-color: aliceblue;
 }
@@ -39,27 +39,13 @@
 	padding-right: 3rem;
     margin-left: 1rem;
 }
-.sidemenu{
-	border: 1px solid purple;
-	background-color: lightblue;
-    position: absolute;
-    right: 1%;
-    width: 33%;
-    color: lightgrey;
-}
-.sidetext{
-	margin: auto;
-    width: 30%;
-}
 .wrapper{
-	border: 1px solid;
+	border: 1px solid burlywood;
 	width: 56%;
 	margin-left: auto;
 	margin-right: auto;
 }
-.tablecontent{
-	border: 1px solid yellow;
-}
+
 .tablecontent li{
 	display: inline-block;
 	padding-left: 3rem;
@@ -89,31 +75,18 @@ input {
 	color: red;
     font-family: cursive;
 }
-.append li{
+.shoplist li{
 	display: inline-block;
 	color: chocolate;
 	padding-left: 8.5rem;
+	width: 3%;
 }
-.append button{
+.shoplist button{
 	border-radius: 1rem;
     background-color: bisque;
     color: cadetblue;
 }
-.productdescrip{
-
-}
-.price{
-
-}
-.quantity{
-
-}
-.total{
-
-}
-.apppend{
-
-}
+.
 #error{
 	margin-top: 20px;
 }
